# FrameExtractor

./: CMakeLists.txt  Encoder.cpp  Encoder.h  FrameExtractor.cpp  ReadMe.txt
lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
